objects/box__ItemMoveQueue__c.object
<CustomObject>
    <description>Queue of box items to move</description>
    <fields>
        <fullName>box__FileOrFolder__c</fullName>
        <description>Is the item to be moved a file or a folder?</description>
        <label>FileOrFolder</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>File</fullName>
                </value>
                <value>
                    <fullName>Folder</fullName>
                    <default>true</default>
                    <label>Folder</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>box__ItemId__c</fullName>
        <description>box file or folder id of the item to be moved</description>
        <label>ItemId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>box__NewParentId__c</fullName>
        <description>Folder Id the file or folder will be reparented to.</description>
        <label>NewParentId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Item Move Queue</label>
    <nameField>
        <displayFormat>IMQ-{000000}</displayFormat>
        <label>Item Move Queue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Item Move Queue Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>